5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_1014.log
== TEST (2019-03-26 18:58:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas8(0.3) 
print(obtencao_de_lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    obtencao_de_lucro = total_vendas8(0.3) 
NameError: name 'total_vendas8' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:58:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas8*(0.3) 
print(obtencao_de_lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    obtencao_de_lucro = total_vendas8*(0.3) 
NameError: name 'total_vendas8' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:58:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0.3) 
print(obtencao_de_lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0.3) 
print(obtencao_de_lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:59:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0.3) 
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.152976
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
